# nbvalx

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  ci_against_releases.yml  pypi.yml  release.yml
docs/: api.rst  conf.py  index.rst
nbvalx/: __init__.py  jupyter_magics.py  pytest_hooks_notebooks.py  pytest_hooks_unit_tests.py  tempfile.py
tests/notebooks/: conftest.py
tests/notebooks/data/coverage/: coverage_mock_module.py  test_coverage_mock_module.ipynb
tests/notebooks/data/ipyparallel/: uses_ipyparallel.ipynb
tests/notebooks/data/magic_entries/: multiple_parameters.ipynb  no_load_ext.ipynb  no_magic_entries_registered.ipynb  run_if_and_exception.ipynb  run_if_and_markdown.ipynb  run_if_and_markdown_and_line_breaks.ipynb  run_if_and_other_magic.ipynb  run_if_multiple_tags.ipynb  run_if_multiple_tags_and_line_breaks.ipynb  run_if_single_tag.ipynb  run_if_single_tag_and_line_breaks.ipynb  single_parameter.ipynb  unused_magic_entries.ipynb
tests/notebooks/data/print/: print.ipynb
tests/notebooks/data/tags/: no_tags_registered.ipynb  no_tags_used.ipynb  run_if_and_exception.ipynb  run_if_and_markdown.ipynb  run_if_and_markdown_and_line_breaks.ipynb  run_if_and_other_magic.ipynb  run_if_multiple_tags.ipynb  run_if_multiple_tags_and_line_breaks.ipynb  run_if_single_tag.ipynb  run_if_single_tag_and_line_breaks.ipynb
tests/notebooks/data/xfail/: fail_final_cell_all_processes.ipynb  fail_final_cell_some_processes.ipynb  fail_final_cell_some_processes_parallel_only.ipynb  fail_intermediate_cell_all_processes.ipynb  fail_intermediate_cell_some_processes.ipynb  fail_magic_final_cell_all_processes.ipynb  fail_skip_intermediate_cell_all_processes.ipynb  fail_skip_intermediate_cell_some_processes.ipynb  success_after_failures.ipynb
tests/unit/: conftest.py  test_gc.py  test_magics.py  test_tempfile.py
