[metadata]
name = nbvalx
version = 0.0.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Collection of pytest utils built on top of nbval
url = https://github.com/multiphenics/nbvalx
project_urls =
    Homepage = https://github.com/multiphenics/nbvalx
    Issues = https://github.com/multiphenics/nbvalx/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
python_requires = >= 3.7
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    ipyparallel
    ipython
    mpi4py
    nbval

[options.extras_require]
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions
    flake8-isort
    flake8-quotes
tests =
    coverage
    nbqa
    pytest
    pytest-xdist

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
i2041_exclude = nbvalx, nbvalx.*
i2045_include = *
i2045_exclude = nbvalx, nbvalx.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    nbvalx/__init__.py: F401
    tests/notebooks/data/**/*.py: D100, I004

[isort]
line_length = 120
multi_line_output = 4
order_by_type = False
