[metadata]
name = nbvalx
version = 0.0.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = Collection of pytest utils built on top of nbval
url = https://github.com/multiphenics/nbvalx
project_urls =
    Homepage = https://github.com/multiphenics/nbvalx
    Issues = https://github.com/multiphenics/nbvalx/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    # install_requires should be just enough to import nbvalx main module (i.e., nbvalx/jupyter_magics.py).
    # Requirements for other modules (i.e., pytest hooks) are listed as extras_require. This allows to have
    # a minimal installation for users who are just willing to use nbvalx in jupyter notebooks.
    ipython

[options.package_data]
nbvalx = py.typed

[options.extras_require]
unit_tests =
    # This extras_require contains install_requires that users should have in order to use nbvalx/pytest_hooks_unit_tests.py
    mpi4py
    pytest >= 7.0
notebooks =
    # This extras_require contains install_requires that users should have in order to use nbvalx/pytest_hooks_notebooks.py
    ipyparallel
    mpi4py
    nbval
    pytest >= 7.0
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions;python_version >= "3.7"
    flake8-isort
    flake8-quotes
    mypy;python_version >= "3.8"
tests =
    # Not to be confused with unit_tests: this extras_require contains requirements to test nbvalx itself, not to use it
    coverage
    nbqa
    pytest

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
imr241_exclude = nbvalx, nbvalx.*
imr245_include = *
imr245_exclude = nbvalx, nbvalx.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    nbvalx/__init__.py: F401
    tests/notebooks/data/**/*.py: D100, I004

[isort]
line_length = 120
multi_line_output = 4
order_by_type = False

[mypy]
check_untyped_defs = True
disallow_any_unimported = True
disallow_untyped_defs = True
exclude = (^\.eggs|^build|^dist|conftest\.py$)
no_implicit_optional = True
pretty = True
show_error_codes = True
strict = True
warn_return_any = True
warn_unused_ignores = True

[mypy-ipyparallel]
ignore_missing_imports = True

[mypy-nbformat]
ignore_missing_imports = True

[mypy-nbval.*]
ignore_missing_imports = True

[mypy-py]
ignore_missing_imports = True
